kubernetes/infra/cilium.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hubble-dashboard-auth
  namespace: kube-system
spec:
  basicAuth:
    secret: hubble-dashboard-auth-secret
