kubernetes/infra/csi-driver-nfs.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: csi-driver-nfs
