kubernetes/infra/csi-driver-smb.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: csi-driver-smb
