kubernetes/infra/gpu-operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gpu-operator
