kubernetes/infra/longhorn.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: longhorn-dashboard-auth
  namespace: longhorn-system
spec:
  basicAuth:
    secret: longhorn-dashboard-auth-secret
