kubernetes/infra/metallb.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: metallb
