kubernetes/infra/node-feature-discovery.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: node-feature-discovery
