kubernetes/infra/postgres-operator.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg
