kubernetes/infra/reloader.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: reloader
